# DC_Energy_conservation

./: .gitignore  251121-东莞松山湖项目孪生建模方案.docx  PROJECT_STATUS.md  README.md  main.py  pyproject.toml
DC-Energy_conservation/: main.py
DC_Energy_conservation/: main.py
augment_caption/: architecture_config_parser_说明文档.md  architecture_module_详细说明.md  data_read_write_说明文档.md  influxdb_config_说明文档.md  main_py_说明文档.md  uid_config_说明文档.md  项目接口_说明文档.md  项目架构_说明文档.md
configs/: influxdb_config.yaml  influxdb_read_write_config.yaml  main.yaml  main_config.yaml  models_config.yaml  modules_config.yaml  optimization_config.yaml  parameters_config.yaml  prediction_config.yaml  prediction_specs_generated.json  security_boundary_config.yaml  uid_config.yaml  uid_info.yaml  utils.yaml  utils_config.yaml
docs/: main_refactor_guide.md  modification_summary.md  refactor_comparison.md  uid_config_migration_guide.md
modules/: architecture_module.py  optimization_module.py  prediction_module.py  uid_read.py
modules/optimizers/: __init__.py  base_optimizer.py  bayesian_optimizer.py  genetic_optimizer.py  grid_search_optimizer.py  optimizer_factory.py  random_search_optimizer.py  rl_optimizer.py  simulated_annealing_optimizer.py
uid/: 103A信息化机房设备信息导出-温湿度.xls  103A信息化机房设备信息导出-空调.xls  1号楼IDC机房空调AO量及DO量测点.xlsx
utils/: architecture_config_parser.py  critical_operation.py  data_processing.py  data_read_write.py  data_reading_writing.py  influxdb_wrapper.py  initialization.py  prediction_uid_mapper.py
